# ProSocial

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ApplicationSummary.md  Common Good - Design Bible (print-ready).html  CompleteAudit.md  FunctionalTrust.md  Phases0to2.md  Phases3to5.md  ProsocialNetworkDesign.md  README.md  RemediationPlan.md  SetupAndIntialImplementation.md  UserGuide.md
.githooks/: pre-commit  (+1 more)
prosocial_platform/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  conftest.py  manage.py  pyproject.toml
prosocial_platform/apps/accounts/: admin.py  forms.py  models.py  services.py  urls.py  validators.py  views.py
prosocial_platform/apps/advanced/: admin.py  apps.py  export_builders.py  forms.py  models.py  services.py  urls.py  views.py
prosocial_platform/apps/ai_coach/: admin.py  apps.py  forms.py  models.py  review_validation.py  services.py  urls.py  views.py
prosocial_platform/apps/common/: admin.py  context_processors.py  image_processing.py  models.py  rate_limit.py  services.py  views.py
prosocial_platform/apps/dashboard/: urls.py  views.py
prosocial_platform/apps/discovery/: admin.py  apps.py  models.py  selectors.py  urls.py  views.py
prosocial_platform/apps/engagement/: admin.py  models.py  services.py  urls.py  views.py
prosocial_platform/apps/follows/: admin.py  apps.py  models.py  selectors.py  services.py  urls.py  views.py
prosocial_platform/apps/gamification/: admin.py  models.py  selectors.py  services.py  urls.py  views.py
prosocial_platform/apps/guilds/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
prosocial_platform/apps/interactions/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
prosocial_platform/apps/knowledge/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
prosocial_platform/apps/messaging/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
prosocial_platform/config/: urls.py
prosocial_platform/deploy/: Dockerfile
prosocial_platform/docs/: DATA_RETENTION.md
prosocial_platform/templates/: base.html
prosocial_platform/tests/: conftest.py
(+249 files in other folders)
