[project]
name = "prosocial-platform"
version = "0.1.0"
description = "A secure prosocial sharing platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<7",
    "psycopg[binary]>=3.1",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "django-environ>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
