[project]
name = "prosocial-platform"
version = "0.1.0"
description = "A secure prosocial sharing platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<7",
    "psycopg[binary]>=3.1",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "django-environ>=0.11",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py"]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "I001"]
"**/tests/**/*.py" = ["E501"]
"**/test_*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
